# clickhouse-test

./: .envrc  .gitattributes  .gitignore  Makefile  Pipfile  README.md  Vagrantfile  copy-files.sh  justfile  pyproject.toml  tmux.yaml  todo.otl  win-linux.bat
ansible/: ansible_install.sh  cli-setup.yml  clickhouse-setup.yml  docker-image-setup.yml  init-setup.yml  minio-setup.yml  playbook.yml  python3-math-setup.yml  python3-setup.yml  requirements.yml
classic-models-db/: sqlite_cm.db
clickhouse/: docker-compose.yml  stock-example.csv  stock-example.gzip.parq  stock-example.parq
doc/: airline-data.md  minio-setup-commands.md
notebooks/: 01-ch-sqlalchemy.ipynb  01-clickhouse-python.ipynb  01-sample-data.ipynb  02-ch-driver.ipynb  03-ch-util.ipynb  10-scikit-titanic.ipynb  Seaborn_Titanic_dataset.ipynb  Titanic_Data_Science_Solutions.ipynb  clickhouse_util.py  test_clickhouse_util.py
notebooks/polars/: 01-intro-polars.ipynb
python/: child-process.py  clickhouse-airline-parquet.py  csv_to_parquet.py  dask-timing.py  duck_cache.py  duckdb-example.py  ibis-clickhouse.py  load-files.sh  metaflow-s3.py  pandas-efficient-memory.py  pandas-series-memory.py  pandas_util.py  parq-cli.py  parquet-arrow-duck.py  python-clickhouse.py  sqlite_metadata.py  test_duck_cache.py
scripts/: airline-ontime-download.sh  connect.sh  jupyter-lab.sh  jupyter-nb.sh  minio.service
